# LucyVK

./: CMakeLists.txt  README.md
.cache/clangd/index/: Camera.cpp.1F7336157005D803.idx  Camera.h.4C660C6B27831A90.idx  CommandPool.cpp.4C7A94F0030B2788.idx  CommandPool.h.9BA0E035F793402C.idx  Config.cpp.CB3F3E8DA74406FA.idx  Events.cpp.08CBBFDD65B9BB31.idx  Events.h.9453D2BCB192FC66.idx  ImageView.cpp.964703EEE2B2B587.idx  ImageView.h.FC29F67037082D78.idx  Instance.cpp.4BBAC165CFE98150.idx  Instance.h.AA353BBC5498E384.idx  LogicalDevice.cpp.16AE718613126AE3.idx  LogicalDevice.h.7470C617A51E74BE.idx  Mesh.cpp.B1B3FC33F0009760.idx  Mesh.h.9EF0592D26E89429.idx  PhysicalDevice.cpp.5F65143D5DE2D3EB.idx  PhysicalDevice.h.63E15012C0C78F18.idx  Swapchain.cpp.BE1225E095B49E68.idx  Swapchain.h.129D52480BAC298A.idx  Window.cpp.060E4EFF54635631.idx  Window.h.FD822546D9B59773.idx  _fixes.hpp.CBB3F1CC6F94E0E0.idx  _vectorize.hpp.B54310227B5904B1.idx  common.hpp.42A9A67B87FD1E59.idx  component_wise.hpp.93CC74A687252514.idx  component_wise.inl.4EB3ED6A1607B5F2.idx  compute_common.hpp.D02F0308DEA4A677.idx  compute_vector_relational.hpp.B0B6E3C031E38F75.idx  constants.hpp.03A143F491650137.idx  constants.inl.64AC8970CAFE4782.idx  device.h.0BEDF2B828BC083F.idx  dual_quaternion.hpp.EB629A6FEC2B9E05.idx  dual_quaternion.inl.767E31FE92B196BA.idx  epsilon.hpp.E4C111A8C4594CC5.idx  epsilon.inl.E47B2129C5DC9C3C.idx  exponential.hpp.357664ECA6454F5D.idx  func_common.inl.7D6F59B6349A7501.idx  func_exponential.inl.410452C3FD504F95.idx  func_geometric.inl.9320FCFF5578F6D9.idx  func_integer.inl.B19BBD21AF0742E8.idx  (+204 more)
src/: Camera.cpp  Camera.h  Events.cpp  Events.h  Mesh.cpp  Mesh.h  Window.cpp  Window.h  engine.cpp  engine.h  events.h  main.cpp  model_render.cpp  model_render.h  renderer.h  sdl_window.cpp  sdl_window.h  tasks.h  vk_renderer.cpp  vk_renderer.h
src/engine/: engine.cpp  engine.h  events.cpp  events.h  renderer.cpp  renderer.h  window.cpp  window.h
src/lucy/: engine.cpp  engine.h  events.cpp  events.h  registry.h  scene.h  system.h  window.cpp  window.h
src/lucyio/: logger.h
src/lucyre/: frame.cpp  frame.h  immediate_command.cpp  immediate_command.h  mesh.cpp  mesh.h  pipeline_registry.cpp  pipeline_registry.h  renderer.cpp  renderer.h
src/lucytl/: array.h  heap_array.h  linked_list.h  list.h  registry.h  static_list.h
src/lucyve/: ve_chunk.h  ve_init.h
src/lucyvk/: CommandPool.cpp  CommandPool.h  Config.cpp  Config.h  Framebuffer.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Registry.h  Swapchain.cpp  Swapchain.h  command.cpp  command.h  config.h  create_info.cpp  create_info.h  debug.cpp  debug.h  define.h  descriptor.cpp  descriptor.h  descriptors.cpp  descriptors.h  destroyer.cpp  destroyer.h  device.cpp  device.h  draw.h  drawlist.h  functions.cpp  functions.h  handles.cpp  handles.h  imgui_impl.cpp  instance.cpp  (+67 more)
src/lucyvk/shaders/: colored_triangle.frag  colored_triangle.vert  fullscreen_image.frag  mesh.vert  terrain.vert
src/lucyvm/: lvm_function.cpp  lvm_function.h
src/lvk/: command.cpp  command.h  config.h  create_info.cpp  create_info.h  descriptor.cpp  descriptor.h  functions.cpp  functions.h  instance.cpp  instance.h  logical_device.cpp  logical_device.h  memory.cpp  memory.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  shaders.cpp  shaders.h  swapchain.cpp  swapchain.h  synchronization.cpp  synchronization.h  types.h
src/math/: math.hpp
src/shaders/: colored_triangle.frag  colored_triangle.spv  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  mesh.vert  raymarch.comp  simple.frag  simple.vert  terrain.frag  tex_image.frag  texture.frag  texture.vert  triangle.vert  voxel.vert
src/util/: logger.h
src/voxel/: camera.cpp  camera.h  quadtree.h  world.cpp  world.h
src/world/: camera.h  world.cpp  world.h
